// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate comparateur-statuts > ACRE 1`] = `
"dirigeant . rémunération . net: 44208
dirigeant . rémunération . net . après impôt: 44154
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 392
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 725
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 24
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 725
protection sociale . retraite . complémentaire: 32
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . taux ACRE . notification calcul ACRE annuel"
`;

exports[`calculate comparateur-statuts > ACRE 2`] = `
"dirigeant . rémunération . net: 37731
dirigeant . rémunération . net . après impôt: 32856
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 878
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 976
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1626
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 53
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 1626
protection sociale . retraite . complémentaire: 141
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > ACRE 3`] = `
"dirigeant . rémunération . net: 32484
dirigeant . rémunération . net . après impôt: 30015
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1309
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 818
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 818
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 884
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 982
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1637
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 51
protection sociale . maladie . arrêt maladie: 53
protection sociale . maladie . arrêt maladie . délai d'attente: 4
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 85
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 1637
protection sociale . retraite . complémentaire: 145
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > EI à l'IS 1`] = `
"dirigeant . rémunération . net: 27619
dirigeant . rémunération . net . après impôt: 26218
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 646
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 718
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1196
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 39
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 1196
protection sociale . retraite . complémentaire: 103
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > bas revenus 1`] = `
"dirigeant . rémunération . net: 1752
dirigeant . rémunération . net . après impôt: 1752
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: null
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 0
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 0
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 0
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: null
protection sociale . maladie . maternité paternité adoption: 6
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 196
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 393
protection sociale . retraite . base: 24
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate comparateur-statuts > bas revenus 2`] = `
"dirigeant . rémunération . net: 556
dirigeant . rémunération . net . après impôt: 556
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 686
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 26
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 223
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate comparateur-statuts > bas revenus 3`] = `
"dirigeant . rémunération . net: 732
dirigeant . rémunération . net . après impôt: 732
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 42
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 26
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 26
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 31
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 52
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 2
protection sociale . maladie . arrêt maladie: 0
protection sociale . maladie . arrêt maladie . délai d'attente: null
protection sociale . maladie . arrêt maladie . délai de carence: null
protection sociale . maladie . maternité paternité adoption: 0
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 53
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate comparateur-statuts > base 1`] = `
"dirigeant . rémunération . net: 40548
dirigeant . rémunération . net . après impôt: 40494
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 392
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 725
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 24
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 725
protection sociale . retraite . complémentaire: 63
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > base 2`] = `
"dirigeant . rémunération . net: 32989
dirigeant . rémunération . net . après impôt: 29537
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 772
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 857
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1429
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 47
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 1429
protection sociale . retraite . complémentaire: 123
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > base 3`] = `
"dirigeant . rémunération . net: 26920
dirigeant . rémunération . net . après impôt: 25522
entreprise . activité . nature . libérale . réglementée: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1147
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 717
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 717
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 774
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 860
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1433
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 45
protection sociale . maladie . arrêt maladie: 47
protection sociale . maladie . arrêt maladie . délai d'attente: 5
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 74
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 1434
protection sociale . retraite . complémentaire: 127
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 1`] = `
"dirigeant . rémunération . net: 30120
dirigeant . rémunération . net . après impôt: 25075
entreprise . activité . nature . libérale . réglementée: false
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 891
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 990
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1650
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 54
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 1650
protection sociale . retraite . complémentaire: 99
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 2`] = `
"dirigeant . rémunération . net: 30981
dirigeant . rémunération . net . après impôt: 28156
entreprise . activité . nature . libérale . réglementée: false
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9420
protection sociale . invalidité et décès . capital décès . orphelin: 196
protection sociale . invalidité et décès . pension de reversion: 725
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 805
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1342
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . arrêt maladie: 44
protection sociale . maladie . arrêt maladie . délai d'attente: 12
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 65
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 1963
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 3925
protection sociale . retraite . base: 1342
protection sociale . retraite . complémentaire: 117
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 3`] = `
"dirigeant . rémunération . net: 25219
dirigeant . rémunération . net . après impôt: 24079
entreprise . activité . nature . libérale . réglementée: false
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1075
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 672
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 672
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 726
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 806
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1344
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 42
protection sociale . maladie . arrêt maladie: 44
protection sociale . maladie . arrêt maladie . délai d'attente: 5
protection sociale . maladie . arrêt maladie . délai de carence: 3
protection sociale . maladie . maternité paternité adoption: 70
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base: 1344
protection sociale . retraite . complémentaire: 119
protection sociale . retraite . trimestres: 4"
`;
